--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "ws/html-parser",
     "require": {
         "symfony/css-selector": "^6.3",
-        "symfony/var-dumper": "^6.3"
+        "symfony/var-dumper": "^6.3",
+        "symfony/dom-crawler": "^6.3"
     },
     "autoload": {
         "psr-4": {
