--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,20 @@
 {
-    "name": "ws/html-parser",
-    "require": {
-        "symfony/css-selector": "^6.3",
-        "symfony/var-dumper": "^6.3",
-        "symfony/dom-crawler": "^6.3"
-    },
-    "autoload": {
-        "psr-4": {
-            "Ws\\HtmlParser\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "ws",
-            "email": "wstaiyuan@outlook.com"
-        }
-    ]
+  "name": "ws/html-parser",
+  "require": {
+    "php": "^8.1",
+    "symfony/css-selector": "^6.3",
+    "symfony/var-dumper": "^6.3",
+    "symfony/dom-crawler": "^6.3"
+  },
+  "autoload": {
+    "psr-4": {
+      "Ws\\HtmlParser\\": "src/"
+    }
+  },
+  "authors": [
+    {
+      "name": "ws",
+      "email": "wstaiyuan@outlook.com"
+    }
+  ]
 }
